--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Vaporwave</title>
-    <link rel="stylesheet" href="/style/style.css" type="text/css">
-    <script defer src="/js/cat.js"></script>
-    <script defer src="/js/comp-inside.js"></script>
-    <script defer src="/js/music.js"></script>
-    <script defer src="/js/mobile-inside.js"></script>
+    <link rel="stylesheet" href="style/style.css" type="text/css">
+    <script defer src="js/cat.js"></script>
+    <script defer src="js/comp-inside.js"></script>
+    <script defer src="js/music.js"></script>
+    <script defer src="js/mobile-inside.js"></script>
 </head>
 <body>
 <div class="desktop">
     <div class="default">
-        <img src="/images/table.png" id="table">
-        <img src="/images/shadow.png" id="shadow">
+        <img src="images/table.png" id="table">
+        <img src="images/shadow.png" id="shadow">
         <img src="" id="cat">
         <script>setTimeout("viewImages()",500); </script>
-        <img src="/images/comp-rest.png" id="comp">
-        <img src="/images/loading-screen-4x.gif" id="loading">
+        <img src="images/comp-rest.png" id="comp">
+        <img src="images/loading-screen-4x.gif" id="loading">
         <script> setTimeout("changeBack()",9550)</script>
         <script> setTimeout("audioPlay()",9550)</script>
-        <img src="/images/window.png" id="window">
+        <img src="images/window.png" id="window">
     </div>
     <div>
         <img src="" id="player1">
